closest to key case

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ tokio-stream = "0.1.10"
 eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
 warp = "0.3"
+strum = {version = "0.24", features = ["derive"] }
+
 
 cli-batteries = "0.3"
 
