--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 eyre = "0.6"
-discv5 = "*"
+discv5 = "0.1"
 tokio = { version = "1.15.0", features = ["full"] }
 enr = { version = "0.6.2", features = ["k256", "ed25519"] }
 libp2p-core = { version = "0.36.0", optional = true }
@@ -23,9 +23,16 @@ eth2_ssz_derive = "0.3.0"
 warp = "0.3"
 strum = {version = "0.24", features = ["derive"] }
 itertools = "0.10"
+rand = "0.8"
+sha3 = "0.10"
 
-
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
+reqwest = "0.11.12"
 cli-batteries = "0.3"
 
 [build-dependencies]
 cli-batteries = "0.3"
+
+[patch.crates-io]
+# discv5 = {git = "https://github.com/timoth-y/discv5"}
+discv5 = {path = "../discv5"}
