--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ strum = {version = "0.24", features = ["derive"] }
 itertools = "0.10"
 rand = "0.8"
 sha3 = "0.10"
+nanoid = "0.4.0"
 
 libp2p = { version = "0.40.0" }
 unsigned-varint = "0.7.1"
