--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ futures = "0.3.24"
 tokio-stream = "0.1.10"
 eth2_ssz = "0.4.0"
 eth2_ssz_derive = "0.3.0"
+eth2_ssz_types = "0.2.1"
+async-recursion = "1.0.0"
 warp = "0.3"
 strum = {version = "0.24", features = ["derive"] }
 itertools = "0.10"
@@ -31,8 +33,8 @@ nanoid = "0.4.0"
 chrono = "0.4.22"
 byteorder = "1.4.3"
 
-discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
-# discv5-overlay = {path = "../trin"}
+# discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
+discv5-overlay = {path = "../trin"}
 lazy_static = "1.4.0"
 
 libp2p = { version = "0.40.0" }
