--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,8 @@ delay_map = "0.1.1"
 
 chrono = "0.4.22"
 byteorder = "1.4.3"
-
-# discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
-discv5-overlay = {path = "../trin"}
+discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
+# discv5-overlay = {path = "../trin"}
 lazy_static = "1.4.0"
 
 libp2p = { version = "0.40.0" }
@@ -50,6 +49,6 @@ cli-batteries = "0.4"
 cli-batteries = "0.4"
 
 [patch.crates-io]
-# discv5 = {git = "https://github.com/timoth-y/discv5"}
-discv5 = {path = "../discv5"}
-discv5-overlay = {path = "../trin"}
+discv5 = {git = "https://github.com/timoth-y/discv5"}
+#discv5 = {path = "../discv5"}
+#discv5-overlay = {path = "../trin"}
